# OpenDAT

./: .gitattributes  .gitignore  Cargo.toml  Rocket.toml  todo.md
interface/: README.md  index.html.tera  login.html.tera  users.html.tera
migrations/: README.md
migrations/00000000000000_init_schema/: down.sql  up.sql
migrations/00000000000001_populate_reference_tables/: down.sql  up.sql
migrations/20201209133806_create_system_types/: down.sql  up.sql
migrations/20201209144943_create_software_categories/: down.sql  up.sql
migrations/20201209145156_create_origin_types/: down.sql  up.sql
migrations/20201209145240_create_regions/: down.sql  up.sql
migrations/20201209145332_create_languages/: down.sql  up.sql
migrations/20201209145538_create_systems/: down.sql  up.sql
migrations/20201209145636_create_software/: down.sql  up.sql
migrations/20201209145726_create_software_regions/: down.sql  up.sql
migrations/20201209145754_create_versions/: down.sql  up.sql
migrations/20201209145842_create_version_languages/: down.sql  up.sql
migrations/20201209145920_create_origins/: down.sql  up.sql
migrations/20201209150001_create_dumps/: down.sql  up.sql
migrations/20201209150035_create_files/: down.sql  up.sql
migrations/20201209150102_create_dump_files/: down.sql  up.sql
migrations/20201209150145_create_file_sub_files/: down.sql  up.sql
reference_values/: languages.toml  origin_types.toml  regions.toml  software_categories.toml  system_types.toml
src/: main.rs
src/db/: mod.rs  (+4 more)
static/: README.md
tooling/: README.md  installing_diesel_cli.md
(+19 files in other folders)
