[package]
name = "open_dat"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2018"

[dependencies]
diesel = "1.4"
diesel_migrations = "1.4"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["diesel_sqlite_pool", "tera_templates"] }
rocket_session = "0.2.1"
rusqlite = { version = "0.14", features = ["bundled"] } # To have sqlite3.lib be compiled automatically
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2.6"
